Ejemplo de como segurizar un request HTTP utilizando RESTEasy

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-*.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
+.project
+.classpath
+.settings
+target
+**/test-output/**
+bin
+pom.xml.releaseBackup
+release.properties
